<resources>
    <string name="home">首页</string>
    <string name="login">点击头像登录</string>
    <string name="setting">设置与帮助</string>
    <string name="myprofile">我的资料</string>
    <string name="download">我的下载</string>
    <string name="search">搜索一下</string>
    <string name="collection">本地视频</string>
    <string name="historyrecord">历史记录</string>
    <string name="dropout">退出</string>
    <string name="app_name">简视</string>
    <string name="video_to_main">返回</string>
    <string name="video_item_about">关于</string>
    <string name="video_item_setup">设置</string>
    <string name="title_about">关于</string>
    <string name="about_none">  </string>
    <string name="about_staff">STAFF</string>
    <string name="about_producer">制作</string>
    <string name="about_producer_name">李骢</string>
    <string name="about_supervision">监督</string>
    <string name="about_supervision_name">罗勇</string>
    <string name="about_particularthanks">特别感谢</string>
    <string name="about_particularthanks_name">罗勇</string>
    <string name="about_github">我的github(开源)</string>
    <string name="about_github_address">https://github.com/topsecretabc</string>
    <string name="about_mailbox">我的邮箱</string>
    <string name="about_mailbox_address">lcleolee@163.com</string>
    <string name="login_username">您的用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="login_registered">注册账号</string>
    <string name="login_loginbutton">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="remember_password">记住密码</string>
    <string name="share_it">分享</string>
    <string name="stand_by">支持</string>
    <string name="like_it">喜欢</string>
    <string name="collection_it">收藏</string>
    <string name="attention">关注</string>
    <string name="charge">充电</string>
    <string name="giveme_charge">请赐予我电量吧！</string>
    <string name="play">播放</string>
    <string name="clarity">清晰度选择</string>
    <string name="playover">播放完成后</string>
    <string name="high">高级</string>
    <string name="decoding">解码设置</string>
    <string name="barrage">弹幕设置</string>
    <string name="help">帮助</string>
    <string name="personalprofile">个人资料</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="UID">UID</string>
    <string name="gender">性别</string>
    <string name="signature">个性签名</string>
    <string name="lazy">才，才不是懒得写签名呢！只是在思考</string>
    <string name="contact_me">需要帮助可以联系我</string>
    <string name="introduction">简介</string>
    <string name="comment">评论</string>
    <string name="go_on">点击进入</string>
    <string name="app">app</string>
    <string name="jiangxi">江西</string>
    <string name="ligong">理工</string>
    <string name="daxue">大学</string>
    <string name="JXUST">JXUST</string>
    <string name="xiugai">修改资料</string>
    <string name="lingyige">另一个app</string>
    <string name="bendi">本地视频</string>
    <string name="queding">确定</string>
    <string name="nicknameedit">请输入您的昵称</string>
    <string name="genderedit">“男”或“女”</string>
    <string name="shuruqianming">请输入您的签名</string>
    <string name="admin">admin</string>
    <string name="password">123456</string>
    <string name="jizhupw">记住密码</string>
    <string name="jilao">你是不是基佬哦！</string>
</resources>
