<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:checkable="true" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:checkable="true"
            />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/myprofile"
            android:checkable="true"
            />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/collection"
            android:checkable="true"
            />
        <item
            android:id="@+id/nav_historyrecord"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/historyrecord"
            android:checkable="true"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"
            android:checkable="true"
            />
        <item
            android:id="@+id/nav_dropout"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/dropout"
            android:checkable="true"
            />
    </group>
</menu>