<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/about_none_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_1"
        android:gravity="center"
        android:text="@string/about_staff"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_none_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_staff"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_2"
        android:gravity="center"
        android:text="@string/about_producer"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_producer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_producer"
        android:gravity="center"
        android:text="@string/about_producer_name"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_none_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_producer_name"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_supervision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_3"
        android:gravity="center"
        android:text="@string/about_supervision"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_supervision_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_supervision"
        android:gravity="center"
        android:text="@string/about_supervision_name"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_none_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_supervision_name"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_particularthanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_4"
        android:gravity="center"
        android:text="@string/about_particularthanks"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_particularthanks_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_particularthanks"
        android:gravity="center"
        android:text="@string/about_particularthanks_name"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_none_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_particularthanks_name"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_5"
        android:gravity="center"
        android:text="@string/about_github"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_github_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_github"
        android:gravity="center"
        android:text="@string/about_github_address"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_none_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_github_address"
        android:gravity="center"
        android:text="@string/about_none"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_mailbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_none_6"
        android:gravity="center"
        android:text="@string/about_mailbox"
        app:layout_heightPercent="5%"/>
    <TextView
        android:id="@+id/about_mailbox_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_mailbox"
        android:gravity="center"
        android:text="@string/about_mailbox_address"
        app:layout_heightPercent="5%"/>

    <ImageView
        android:id="@+id/JXUST_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_mailbox_address"
        android:layout_centerHorizontal="true"
        android:src="@drawable/jxust"
        />


</android.support.percent.PercentRelativeLayout>
























































