<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/profile_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/profile_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <Button
                android:id="@+id/profilebackdata_button"
                android:layout_width="@dimen/setting_words"
                android:layout_height="@dimen/setting_words"
                android:background="@drawable/ic_arrow_back_black"
                android:layout_margin="@dimen/setting_words"/>
            <ImageView
                android:id="@+id/profiledata_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_zone_background"
                app:layout_collapseMode="parallax"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/personal_profile_menu"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/touming">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/personal_profile"
                            android:layout_margin="@dimen/jiange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/personalprofile"
                            android:textColor="@color/colorPrimaryDark"/>
                        <TextView
                            android:layout_margin="@dimen/jiange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/personal_profile"
                            android:text="@string/avatar"
                            android:textSize="@dimen/setting_words"
                            android:textColor="@color/navigationBarColor"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <View
                            android:id="@+id/play_xian1"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/fenhongxian"
                            android:background="@color/qianhui"/>
                        <TextView
                            android:id="@+id/nickname_ziliao"
                            android:layout_margin="@dimen/jiange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/play_xian1"
                            android:text="@string/nickname"
                            android:textSize="@dimen/setting_words"
                            android:textColor="@color/navigationBarColor"/>
                        <View
                            android:id="@+id/play_xian2"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/fenhongxian"
                            android:layout_below="@id/nickname_ziliao"
                            android:background="@color/qianhui"/>

                        <EditText
                            android:id="@+id/nickname_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/nicknameedit"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/gender_person"
                            android:layout_margin="@dimen/jiange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="@dimen/setting_words"
                            android:textColor="@color/navigationBarColor"/>
                        <View
                            android:id="@+id/play_xian4"
                            android:layout_below="@id/gender_person"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/fenhongxian"
                            android:background="@color/qianhui"/>
                        <EditText
                            android:id="@+id/gender_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:hint="@string/genderedit"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/person_signature"
                            android:layout_margin="@dimen/jiange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signature"
                            android:textSize="@dimen/setting_words"
                            android:textColor="@color/navigationBarColor"/>
                        <EditText
                            android:layout_marginRight="@dimen/jiange"
                            android:id="@+id/signature_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@id/person_signature"
                            android:hint="@string/shuruqianming"
                            />
                        <View
                            android:id="@+id/play_xian5"
                            android:layout_below="@id/signature_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/fenhongxian"
                            android:background="@color/qianhui"/>

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/profile_data_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/personal_profile_menu"
                android:backgroundTint="@color/yibanhong"
                android:text="@string/queding"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_avater"
        android:layout_width="@dimen/header_image"
        android:layout_height="@dimen/header_image"
        android:src="@drawable/jxust"
        app:layout_anchor="@id/profile_appbar"
        app:layout_anchorGravity="bottom|end"/>
</android.support.design.widget.CoordinatorLayout>