<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/navigationBarColor"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/jiange" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/qianhui"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/daily_video_action_bg"
                    android:clickable="false"
                    android:src="@drawable/ic_share_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_it" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/daily_video_action_bg"
                    android:src="@drawable/ic_coin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stand_by" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/daily_video_action_bg"
                    android:src="@drawable/ic_collect" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collection_it" />
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/jiange" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/fenhongxian"
            android:background="@color/colorPrimaryDark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/video_leftavatar"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="@dimen/jiange"/>
            <TextView
                android:id="@+id/video_leftauthortag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/video_leftavatar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:backgroundTintMode="@color/yibanhong"
                android:gravity="center"
                android:text="@string/attention"
                android:textColor="@color/colorPrimaryDark"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/fenhongxian"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/video_charge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start|top"
            android:padding="@dimen/jiange"
            android:text="@string/giveme_charge"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_charge_power"
            android:id="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/jiange"/>

        <Button
            app:layout_widthPercent="20%"
            app:layout_heightPercent="10%"
            android:text="@string/charge"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTintMode="@color/colorPrimary"
            android:id="@+id/textView2"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/jiange"/>
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>