<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
     <ImageView
         android:id="@+id/login_back"
         app:layout_widthPercent="10%"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:onClick="toLoginActivity"
         android:src="@drawable/ic_arrow_back_black"

         />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_loginbutton"
            android:layout_centerVertical="true"
            app:layout_widthPercent="10%"
            android:layout_toRightOf="@id/login_back"
           />

    </android.support.percent.PercentRelativeLayout>

    <RelativeLayout
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/iv_icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_22" />

        <ImageView
            android:id="@+id/iv_icon_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:src="@drawable/jianshi"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/iv_icon_right" />

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_33" />
    </RelativeLayout>


    <android.support.percent.PercentRelativeLayout
        android:id="@+id/login_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_input_rounded_bg"
        >

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                app:layout_heightPercent="10%"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_login_username_default"
                android:ellipsize="start"
                android:hint="@string/login_username"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                app:layout_heightPercent="10%"
                android:layout_below="@id/et_username"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_login_password_default"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1" />
            <Button
                android:id="@+id/button_registered"
                app:layout_widthPercent="40%"
                app:layout_heightPercent="10%"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/et_password"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/login_registered"
                />
            <Button
                android:id="@+id/button_login"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="10%"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_password"
                android:layout_gravity="center_horizontal"
                android:background="@color/nav_header"
                android:text="@string/login_loginbutton"
                android:textColor="@color/colorPrimary"
                />
        </android.support.percent.PercentRelativeLayout>

    </android.support.percent.PercentRelativeLayout>
</LinearLayout>